--- a/extension-yueliu1/index.html
+++ b/extension-yueliu1/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
-</head>
-  <header class="fix-header">
+<head>
     <meta charset="utf-8">
-  	<meta name="viewport" content="initial-scale=1, width=device-width">
-  	
-  	<link rel="stylesheet"  href="./css/index2.css" />
-  	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Segoe UI Variable:wght@400;600&display=swap" />
-  	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Segoe UI:wght@400;600&display=swap" />
-  	
-  </header>
+    <meta name="viewport" content="initial-scale=1, width=device-width">
+    <link rel="stylesheet" href="./css/index2.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Segoe UI Variable:wght@400;600&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Segoe UI:wght@400;600&display=swap" />
+</head>
 <body>
   <div class="bookmark-copilot-extension">
     <div class="title-row">
@@ -76,9 +73,10 @@
                 </div>
             </div>
         </div>
+        <div id="bookmarkTree"></div>
         <div class="bookmarked-pages-and-folders">
-            <div class="list-sections"">
-                <div class="top-section"  id="bookmarkTree">
+            <div class="list-sections">
+                <div class="top-section">
 
                 </div>
             </div>
