add progress bar

--- a/extension/index.html
+++ b/extension/index.html
@@ -22,6 +22,30 @@
                     <img class="chevron-icon" alt="" src="img/Chevron-down.svg">
                 </div>
             </div>
+            <div class="output-loader" id="generateOutputView">
+                <div class="output-header">
+                    <div class="output-icon-title">
+                        <div class="output-title">Finding the most suitable folder..</div>
+                    </div>
+                    <div class="output-button">
+                        <img class="square-dismiss-icon" alt="" src="img/Square Dismiss.svg">
+                        <div class="text-wrapper-for-offset.output">
+                            <div class="text">Stop generating</div>
+                        </div>
+                    </div>
+                    <div class="badge">
+                        <div class="text-wrapper">
+                            <div class="output-text">ESC</div>
+                            <div class="spacer-for-min-width">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="static-progressbar">
+                    <div class="track">
+                    </div>
+                </div>
+            </div>
             <ul class="menu-list" id="dropdownMenu">
                 <li class="menu-list-item" id="btnReorganize">
                     <div class="menu-list-container"">
