implement apply&discard

--- a/extension/index.html
+++ b/extension/index.html
@@ -114,16 +114,16 @@
                         <div class="text" id="btnApply_text">Keep it</div>
                     </div>
                 </div>
-                <div class="button4" id="btnGenerate">
+                <div class="button4 disabled" id="btnGenerate">
                     <img class="star-icon" alt="" src="img/Regenerate.svg">
                     <div class="text-wrapper-for-offset1">
-                        <div class="text" id="btnGenerate_text">Regenerate</div>
+                        <div class="text disabled" id="btnGenerate_text">Regenerate</div>
                     </div>
                 </div>
-                <div class="button4" id="btnAdjust">
+                <div class="button4 disabled" id="btnAdjust">
                     <img class="star-icon" alt="" src="img/Adjust.svg">
                     <div class="text-wrapper-for-offset1">
-                        <div class="text" id="btnAdjust_text">Adjust</div>
+                        <div class="text disabled" id="btnAdjust_text">Adjust</div>
                     </div>
                 </div>
                 <div class="button4" id="btnDiscard">
